# opinionated

./: .gitignore  CLAUDE.md  README.md  worker_notes.md
claude/: settings.json
claude/hooks/: block-env.sh
forge/: CLAUDE.md  Cargo.toml  Dockerfile.runner  Dockerfile.sidecar  Dockerfile.worker
forge/action/: agent-work.yml  sim-work.yml
forge/crates/cdc/src/: main.rs
forge/crates/forgejo-api/docs/: ActionRunJob.md  ActionVariable.md  Activity.md  AddCollaboratorOption.md  ApiForbiddenError.md  ApiInternalServerError.md  ApiInvalidTopicsError.md  ApiUnauthorizedError.md  ApiValidationError.md  BlockedUser.md  BranchProtection.md  ChangeFileOperation.md  CombinedStatus.md  Compare.md  CreateQuotaRuleOptions.md  CreateTagProtectionOption.md  CreateTeamOption.md  DeleteLabelsOption.md  DispatchWorkflowOption.md  DispatchWorkflowRun.md  EditIssueOption.md  EditOrgOption.md  EditTagProtectionOption.md  EditTeamOption.md  GitBlob.md  MergePullRequestOption.md  MiscellaneousApi.md  NodeInfo.md  NoteOptions.md  OrganizationApi.md  PackageApi.md  PullRequest.md  (+15 more)
forge/crates/sidecar/: CLAUDE.md  Cargo.toml
forge/crates/types/: Cargo.toml
forge/demo/fixtures/: chain.json
forge/infra/: CLAUDE.md
forge/infra/forgejo/: app.ini  openapi.json
forge/infra/runner/: config.yaml
forge/infra/test/: test.secrets.tfvars.example
forge/scripts/: init.sh
forgejo/actions/code-duplication/: action.yml
forgejo/actions/flutter-ci/: action.yml
forgejo/actions/rust-audit/: action.yml
forgejo/actions/rust-ci/: action.yml
forgejo/actions/rust-coverage/: action.yml
github/claude/hooks/: check-gh-token.sh
hooks/: duplication.sh  flutter.sh  install.sh  jscpd.json  pre-commit  rust.sh  terraform.sh
workflow/: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile.runner-env  Dockerfile.sidecar  Dockerfile.worker  docker-compose.infra.yml  docker-compose.workers.yml  docker-compose.yml
workflow/action/: agent-work.yml  sim-work.yml
workflow/crates/cdc/: Cargo.toml
workflow/crates/cdc/src/: main.rs
workflow/crates/cli/: Cargo.toml
workflow/crates/cli/src/: main.rs
workflow/crates/forgejo-api/: Cargo.toml  README.md
workflow/crates/forgejo-api/.openapi-generator/: FILES
workflow/crates/forgejo-api/docs/: ActionRun.md  ActionTask.md  ActionTaskResponse.md  ActivitypubApi.md  AdminApi.md  AnnotatedTag.md  ApiNotFound.md  ApiRepoArchivedError.md  Attachment.md  CommitStatus.md  ContentsResponse.md  CreateBranchProtectionOption.md  CreateHookOption.md  CreateIssueCommentOption.md  CreateMilestoneOption.md  CreateOrgOption.md  CreatePushMirrorOption.md  CreateQuotaGroupOptions.md  CreateReleaseOption.md  CreateRepoOption.md  CreateStatusOption.md  CreateVariableOption.md  EditAttachmentOptions.md  EditBranchProtectionOption.md  EditIssueCommentOption.md  EditQuotaRuleOptions.md  EditReleaseOption.md  EditRepoOption.md  EditUserOption.md  FileDeleteResponse.md  GeneralRepoSettings.md  Hook.md  IssueApi.md  IssueFormField.md  IssueLabelsOption.md  ListActionRunResponse.md  MarkupOption.md  MigrateRepoOptions.md  NotificationApi.md  PullRequestMeta.md  (+24 more)
workflow/crates/forgejo-api/src/apis/: activitypub_api.rs  admin_api.rs  configuration.rs  issue_api.rs  miscellaneous_api.rs  mod.rs  notification_api.rs  organization_api.rs  package_api.rs  repository_api.rs  settings_api.rs  user_api.rs
workflow/crates/forgejo-api/src/models/: access_token.rs  action_run.rs  action_run_job.rs  action_task.rs  action_task_response.rs  action_variable.rs  activity.rs  activity_pub.rs  add_collaborator_option.rs  add_time_option.rs  annotated_tag.rs  annotated_tag_object.rs  api_error.rs  api_forbidden_error.rs  api_internal_server_error.rs  api_invalid_topics_error.rs  api_not_found.rs  api_repo_archived_error.rs  api_unauthorized_error.rs  api_validation_error.rs  attachment.rs  blocked_user.rs  branch.rs  branch_protection.rs  change_file_operation.rs  change_files_options.rs  changed_file.rs  combined_status.rs  comment.rs  commit.rs  commit_affected_files.rs  commit_date_options.rs  commit_meta.rs  commit_stats.rs  commit_status.rs  commit_user.rs  compare.rs  contents_response.rs  create_access_token_option.rs  create_branch_protection_option.rs  (+188 more)
workflow/crates/integration/: Cargo.toml
workflow/crates/integration/src/: lib.rs
workflow/crates/integration/tests/: seed.rs
workflow/crates/sidecar/: CLAUDE.md  Cargo.toml
workflow/crates/sidecar/src/: api.rs  config.rs  consumer.rs  coord.rs  dispatcher.rs  error.rs  forgejo.rs  graph.rs  main.rs  monitor.rs  registry.rs  reviewer.rs  webhook.rs
workflow/crates/sidecar/static/: graph.html
workflow/crates/types/: CLAUDE.md
workflow/crates/types/src/: lib.rs
workflow/crates/worker/: CLAUDE.md  Cargo.toml
workflow/crates/worker/src/: client.rs  dispatch.rs  factory.rs  forgejo.rs  lib.rs  worker.rs
workflow/demo/: README.md
workflow/demo/fixtures/: hub.json
workflow/infra/: .gitignore  CLAUDE.md
workflow/infra/dev/: main.tf  terraform.tfvars.example  variables.tf
workflow/infra/forgejo/: app.ini  swagger.json
workflow/infra/modules/forgejo-init/: main.tf  outputs.tf  variables.tf
workflow/infra/runner/: config.yaml
workflow/infra/test/: main.tf  test.tfvars  variables.tf
workflow/scripts/: init.sh  restart.sh  workers.sh
(+82 files in other folders)
