[workspace]
members = [
    "crates/types",
    "crates/sidecar",
    "crates/worker",
    "crates/cli",
    "crates/integration",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-nats = "0.35"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v5"] }
