[package]
name = "workflow-cdc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "workflow-cdc"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
bytes = { workspace = true }
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
workflow-types = { path = "../types" }
