[package]
name = "workflow-cdc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "workflow-cdc"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-postgres = "0.7"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
workflow-types = { path = "../types" }
