[package]
name = "workflow-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

[dev-dependencies]
workflow-types = { path = "../types" }
workflow-worker = { path = "../worker" }

anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
