[package]
name = "workflow-sidecar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "workflow-sidecar"
path = "src/main.rs"

[dependencies]
workflow-types = { path = "../types" }

anyhow = { workspace = true }
async-nats = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
indradb-lib = { version = "5", features = ["rocksdb-datastore"] }

[dev-dependencies]
tempfile = "3.27.0"
