[package]
name = "workflow-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
workflow-types = { path = "../types" }

anyhow = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dependencies.async-nats]
workspace = true
